# hidden-object-game

./: Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2j22icldg5hva83vbkhmg4jdb9l86rfi-source
src/: camera.rs  debug.rs  hidden_object.rs  main.rs  mouse.rs
